--- a/Style.css
+++ b/Style.css
@@ -96,7 +96,7 @@ footer {
 .imagem-borda {
     display: block;          /* Centraliza a imagem */
     margin: 20px auto;       /* Centraliza horizontalmente */
-    border: 10px solid #ff7f50;  /* Borda laranja */
+    border: 10px solid black;   /* Borda laranja */
     border-radius: 15px;     /* Bordas arredondadas */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  /* Sombra suave */
     max-width: 100%;         /* Garante que a imagem não ultrapasse a largura da tela */
